--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -6,6 +6,17 @@ name: verify
 env:
   TZ: Asia/Tokyo
 jobs:
+  npm-version-up:
+      runs-on: ubuntu-latest
+      timeout-minutes: 30
+      steps:
+          - uses: actions/checkout@v3
+          - run: |
+                git config --global user.name "$(git --no-pager log --format=format:'%an' -n 1)"
+                git config --global user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
+                npm version minor -m "Upgrade to v%s"
+                git push --force
+
   experimental1:
     runs-on: ubuntu-latest
     steps:
